Renamed solution form Mappe to Mappee and updated README.md

--- a/src/Benchmark/Benchmark.csproj
+++ b/src/Benchmark/Benchmark.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mappe\Mappe.csproj" />
+    <ProjectReference Include="..\Mappee\Mappee.csproj" />
   </ItemGroup>
 
 </Project>
