Moved files to right places

--- a/src/Tests/Mappee.UnitTests/Mappee.UnitTests.csproj
+++ b/src/Tests/Mappee.UnitTests/Mappee.UnitTests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mappee\Mappee.csproj" />
+    <ProjectReference Include="..\..\Mappee\Mappee.csproj" />
   </ItemGroup>
 
 </Project>
