--- a/src/Samples/Sample.WebApp/Sample.WebApp.csproj
+++ b/src/Samples/Sample.WebApp/Sample.WebApp.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mappee\Mappee.csproj" />
+    <ProjectReference Include="..\..\Mappee\Mappee.csproj" />
   </ItemGroup>
 
 </Project>
