--- a/src/Tests/Benchmark/Benchmark.csproj
+++ b/src/Tests/Benchmark/Benchmark.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mappee\Mappee.csproj" />
+    <ProjectReference Include="..\..\Mappee\Mappee.csproj" />
   </ItemGroup>
 
 </Project>
