--- a/src/Tests/TestApp/TestApp.csproj
+++ b/src/Tests/TestApp/TestApp.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mappee\Mappee.csproj" />
+    <ProjectReference Include="..\..\Mappee\Mappee.csproj" />
   </ItemGroup>
 
 </Project>
