--- a/src/Mappee/Mappee.csproj
+++ b/src/Mappee/Mappee.csproj
@@ -14,9 +14,9 @@
 		<RepositoryUrl>https://github.com/sonquer/mappee</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<Authors>Patryk Pasek</Authors>
-		<AssemblyVersion>0.1.3.0</AssemblyVersion>
-		<FileVersion>0.1.3.0</FileVersion>
-		<Version>0.1.3.0-alpha</Version>
+		<AssemblyVersion>1.0.0.0</AssemblyVersion>
+		<FileVersion>1.0.0.0</FileVersion>
+		<Version>1.0.0.0</Version>
 		<PackageIcon>icon.jpg</PackageIcon>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -30,7 +30,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis" Version="4.8.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="Images\icon.jpg" Pack="true" PackagePath="\" />
